# sentencepiece

./: CMakeLists.txt  README.md  botchan_model.model  log_notes.txt  log_swift.txt  minimal_spm_seed  minimal_spm_seed.cc  minimal_spm_trainer_seed.cc  run_botchan_example.sh  run_swift_example.sh  seed_corpus.txt  swift_model.model  swift_model.vocab  test_initial_vocab
.github/workflows/: cmake.yml  cross_build.yml  wheel.yml
.github/workflows/requirements/: base.txt  cibuildwheel.txt
python/: .gitignore  README.md  build_bundled.sh  build_sdist.sh  pyproject.toml  setup.py
python/src/sentencepiece/: __init__.py  sentencepiece.i  sentencepiece_wrap.cxx
python/test/: sentencepiece_test.py
src/: CMakeLists.txt  compile_charsmap_main.cc  normalizer.cc  sentencepiece_processor.cc  spm_encode_main.cc  spm_train_main.cc  trainer_interface.cc  unigram_model_trainer.cc  unigram_model_trainer.h  util.cc  util.h  util_test.cc
